# tvb-root

./: ..gitignore.swp  .coveragerc  .gitignore  ACKNOWLEDGEMENTS.md  Jenkinsfile  LICENSE  README.md  build_base.py  build_pyinstaller.py  codemeta.json  conda_build_changes.patch  install_from_svn.sh  install_full_tvb.sh  package_for_pip.bat  package_for_pip.sh  project_metrics.py  setup_extra.py  setup_linux.spec  setup_mac.py  setup_windows.spec  sonar-project.properties
tvb_build/: Jenkinsfile  Jenkinsfile-GpuTestsSqLite  Jenkinsfile-Linux  Jenkinsfile-Mac  Jenkinsfile-Migrate  Jenkinsfile-Step1  Jenkinsfile-TVBRun  Jenkinsfile-TestsPG  Jenkinsfile-TestsSqLite  Jenkinsfile-Windows  app.entitlements  app.inner.entitlements  build_from_conda.py  build_step1.py  conda_env_to_app.py  create_conda_build.bat  create_conda_build.sh  create_conda_build2.sh  info.plist  install_full_tvb.bat  install_full_tvb.sh  mac_conda_env.sh  notebook_runner.py  package_for_pip.bat  package_for_pip.sh  package_for_pip_client.sh  pyproject.toml  setup.py  setup_conda_env_sci_lib.bat  setup_mac.py
tvb_build/deploy_with_keycloak/: .tvb.configuration  Dockerfile  Jenkinsfile
tvb_build/deploy_with_keycloak/hbp_openshift/: tvb_deployer.yml
tvb_build/docker/: .sdsrd  .tvb.configuration  Dockerfile  Dockerfile-Windows-build  Dockerfile-build  Dockerfile-hpc  Dockerfile-migrate  Dockerfile-migrate-postgres  Dockerfile-multiscale-build  Dockerfile-postgres  Dockerfile-run  Dockerfile-test  Dockerfile-win  kernel.json  requirements_group
tvb_build/docker/hbp-openshift/: .tvb.configuration  Dockerfile  Jenkinsfile
tvb_build/ebrains_cloud/: KubeManager.py  ManagingOpenIDConnectTVB.ipynb  certificate-bkt.yml  certificate-official.yml  certificate-single.yml  certificate.yml  host_ip.py  kube_manager.py
tvb_build/ebrains_cloud/certificates/: certificate-bkt.yml  certificate-landing-page.yml  certificate-official.yml
tvb_build/ebrains_cloud/tvb_rancher/: README  jupyter-lab-test.yaml  langing-page.yaml  pod-assign.yaml  pod-db.yaml  pod-exec.yaml  pod-tvb.yaml  pod-web.yaml  tvb-root.yaml
tvb_build/hbp-openshift/: Jenkinsfile  tvb_deployer.json  tvb_deployer.yml
tvb_build/hbp_openshift_deployer/: .tvb.landing.page.configuration  README  tvb_backup.yml  tvb_backup_db.yml  tvb_backup_storage.yml  tvb_deployer.yml  tvb_storage_backup.yml
tvb_build/hbp_openshift_deprecated/: tvb_deployer.yml
tvb_build/spack/tvb-data/: package.py
tvb_build/spack/tvb-framework/: package.py
tvb_build/spack/tvb-library/: package.py
tvb_build/spack/tvb-storage/: package.py
tvb_build/tvb_build/: Jenkinsfile-Migrate
tvb_build/tvb_build/third_party_licenses/: __init__.py  build_licenses.py  deps_xml_parser.py  hudson_reported_dependecies.py  package_finder.py  packages_accepted.xml  scheme.css
tvb_build/tvb_build/tvb_documentor/: __init__.py  doc_generator.py  generate_modules.py  generate_rst_for_scripting_demos.py
tvb_contrib/: LICENSE  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  setup.py
tvb_contrib/tvb/: __init__.py
tvb_framework/: .coveragerc  AUTHORS  MANIFEST.in  MANIFEST_bids_monitor.in  README.rst  README_bids_monitor.rst  README_rest_client.rst  package.json  pyproject.toml  pyproject_bids_monitor.toml  pyproject_rest_client.toml  requirements.txt  setup.py  setup_bids_monitor.py  setup_rest_client.py  webpack.config.js
tvb_framework/src/: validators.js
tvb_framework/tvb/: __init__.py
tvb_framework/tvb/config/: __init__.py  algorithm_categories.py  profile_settings.py
tvb_framework/tvb/core/: __init__.py  decorators.py  operation_async_launcher.py  operation_hpc_launcher.py  removers_factory.py  utils.py
tvb_framework/tvb/interfaces/: __init__.py
tvb_framework/tvb/tests/: __init__.py
tvb_kernels/: .gitignore  CMakeLists.txt  Makefile  README.md  ghci-build.yml  mkispc.sh  nodes.ispc  pyproject.toml  rebuild.sh  spack.yaml  test_conn.py  test_nodes.py  tvb_kernels.cpp  tvbk.h
tvb_kernels/em/: .gitignore  build.sh
tvb_kernels/src/: Makefile  em.cpp  tvbk.h  tvbk_conn.c
tvb_kernels/tvb_kernels/: __init__.py
tvb_library/: .coveragerc  .gitignore  AUTHORS  Dockerfile  MANIFEST.in  Pipfile  README.rst  pyproject.toml  requirements.txt  setup.py
tvb_library/tvb/: .utils.py.swp  __init__.py  setup_demo_data.py
tvb_library/tvb/analyzers/: __init__.py  fft.py  fmri_balloon.py  graph.py  ica.py  ica_algorithm.py  info.py  metric_kuramoto_index.py  metric_proxy_metastability.py  metric_variance_global.py  metric_variance_of_node_variance.py  node_coherence.py  node_complex_coherence.py  pca.py  preproc.py  wavelet.py
tvb_library/tvb/basic/: exceptions.py  profile.py  readers.py
tvb_library/tvb/datasets/: __init__.py  base.py  tvb_data.py  utils.py  zenodo.py
tvb_library/tvb/datatypes/: __init__.py  connectivity.py  cortex.py  equations.py  fcd.py  graph.py  local_connectivity.py  mode_decompositions.py  patterns.py  projections.py  region_mapping.py  sensors.py  spectral.py  structural.py  surfaces.py  temporal_correlations.py  time_series.py  tracts.py  volumes.py
tvb_library/tvb/rateML/: README.md  XML2model.py  rML_v0.xsd  tmpl8_cuda.py  tmpl8_driver.py  tmpl8_python.py
tvb_library/tvb/simulator/: __init__.py  common.py  coupling.py  descriptors.py  history.py  hybrid.py  integrators.py  lab.py  monitors.py  noise.py  simulator.py
tvb_library/tvb/tests/: __init__.py  bench.py  bench_against_mpr_backend.py  validate_model_parameters.py
tvb_storage/: .coveragerc  AUTHORS  LICENSE  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  setup.py
tvb_storage/tvb/: __init__.py  decorators.py  utils.py
tvb_storage/tvb/encryption/: data_encryption_handler.py  encryption_handler.py
tvb_storage/tvb/file/: data_encryption_handler.py  exceptions.py  files_helper.py  files_update_manager.py  hdf5_storage_manager.py  lab.py  xml_metadata_handlers.py
tvb_storage/tvb/neocom/: _h5loader.py  h5.py
tvb_storage/tvb/neotraits/: _h5accessors.py  _h5core.py  h5.py
tvb_storage/tvb/storage/: storage_interface.py
tvb_storage/tvb/tests/: files_helper_test.py  (+3 more)
(+3985 files in other folders)
