# -*- coding: utf-8 -*-
#
#
# TheVirtualBrain-Framework Package. This package holds all Data Management, and
# Web-UI helpful to run brain-simulations. To use it, you also need to download
# TheVirtualBrain-Scientific Package (for simulators). See content of the
# documentation-folder for more details. See also http://www.thevirtualbrain.org
#
# (c) 2012-2025, Baycrest Centre for Geriatric Care ("Baycrest") and others
#
# This program is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software Foundation,
# either version 3 of the License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
# PARTICULAR PURPOSE.  See the GNU General Public License for more details.
# You should have received a copy of the GNU General Public License along with this
# program.  If not, see <http://www.gnu.org/licenses/>.
#
#
#   CITATION:
# When using The Virtual Brain for scientific publications, please cite it as explained here:
# https://www.thevirtualbrain.org/tvb/zwei/neuroscience-publications
#
#


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tvb-framework"
version = "2.10.0"
description = "A package for performing whole brain simulations"
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Mihai Andrei" },
    { name = "Lia Domide" },
    { name = "Stuart Knock" },
    { name = "Bogdan Neacsa" },
    { name = "Paula Prodan" },
    { name = "Paula Sansz Leon" },
    { name = "Marmaduke Woodman" },
]
maintainers = [
    { name = "TVB Admin", email = "tvb.admin@thevirtualbrain.org" }
]
keywords = [
    "animal",
    "brain",
    "delay",
    "dynamics",
    "human",
    "models",
    "neuronal",
    "neuroscience",
    "simulator",
    "tvb",
]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "alembic",
    "bctpy",
    "cherrypy",
    "docutils",
    "flask",
    "flask-restx",
    "formencode",
    "gevent",
    "h5py",
    "Jinja2",
    "matplotlib",
    "nibabel",
    "numpy<2.3",
    "pandas",
    "Pillow",
    "psutil",
    "python-keycloak",
    "requests",
    "requests-toolbelt>=0.10",
    "scikit-learn",
    "scipy",
    "siibra",
    "simplejson",
    "six",
    "sqlalchemy",
    "tvb-data",
    "tvb-gdist",
    "tvb-library",
    "tvb-storage",
    "werkzeug",
]

[project.optional-dependencies]
extra = [
    "allensdk",
]
hpc = [
    "elasticsearch",
    "pyunicore",
]
postgres = [
    "psycopg2",
]
test = [
    "BeautifulSoup4",
    "pytest",
    "pytest-benchmark",
    "pytest-mock",
]

[project.urls]
Download = "https://github.com/the-virtual-brain/tvb-root"
Homepage = "https://www.thevirtualbrain.org"

[tool.hatch.build.targets.sdist]
include = [
    "/tvb",
]
exclude = [
    'tvb.interfaces.rest.bids_monitor', 'tvb.interfaces.rest.bids_monitor.*',
    'tvb.interfaces.rest.client', 'tvb.interfaces.rest.client.*']


[tool.hatch.build.targets.wheel]
packages = ["tvb"]
