[build-system]
requires = ["hatchling", "setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "hatchling.build"

[project]
name = "tvb_kernels"
version = "0.0.1"
description = "TVB computational kernels"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Marmaduke Woodman", email = "marmaduke.woodman@univ-amu.fr" },
]
classifiers = [ ]
dependencies = [ "numpy" ]

[project.urls]
Homepage = "https://github.com/the-virtual-brain/tvb-root"

[tool.cibuildwheel]
build-verbosity = 1
test-command = "pytest"
test-requires = "pytest"

skip = ["pp*"] # don't build pypy wheels
archs = ["auto"]
