[build-system]
requires = ["hatchling", "hatch-build-scripts", "ctypesgen"]
build-backend = "hatchling.build"

[project]
name = "tvb_kernels"
version = "0.0.1"
description = "TVB computational kernels"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Marmaduke Woodman", email = "marmaduke.woodman@univ-amu.fr" },
]
classifiers = [ ]
dependencies = [ "numpy" ]

[project.urls]
Homepage = "https://github.com/the-virtual-brain/tvb-root"

[tool.cibuildwheel]
build-verbosity = 1
test-command = "pytest"
test-requires = "pytest"

skip = ["pp*"] # don't build pypy wheels
archs = ["auto"]

# [tool.hatch.version]
# path = "tvb_kernels/version.py"

[tool.hatch.build]
include = [
    "tvb_kernels/*.py",
]

[[tool.hatch.build.hooks.build-scripts.scripts]]
work_dir = "src"
out_dir = "tvb_kernels"
commands = [ 
    "make libtvbk.so",
    "ctypesgen -l libtvbk.so tvbk.h > _ctg_tvbk.py",
]
artifacts = [ 
    "libtvbk.so",
    "_ctg_tvbk.py",
]
