# -*- coding: utf-8 -*-
#
#
# TheVirtualBrain-Scientific Package. This package holds all simulators, and
# analysers necessary to run brain-simulations. You can use it stand alone or
# in conjunction with TheVirtualBrain-Framework Package. See content of the
# documentation-folder for more details. See also http://www.thevirtualbrain.org
#
# (c) 2012-2024, Baycrest Centre for Geriatric Care ("Baycrest") and others
#
# This program is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software Foundation,
# either version 3 of the License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
# PARTICULAR PURPOSE.  See the GNU General Public License for more details.
# You should have received a copy of the GNU General Public License along with this
# program.  If not, see <http://www.gnu.org/licenses/>.
#
#
#   CITATION:
# When using The Virtual Brain for scientific publications, please cite it as explained here:
# https://www.thevirtualbrain.org/tvb/zwei/neuroscience-publications
#
#


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tvb-library"
version = "2.9.2"
description = "A package for performing whole brain simulations"
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Marmaduke Woodman" },
    { name = "Jan Fousek" },
    { name = "Stuart Knock" },
    { name = "Paula Sanz Leon" },
    { name = "Viktor Jirsa" },
]
maintainers = [
    { name = "TVB Admin", email = "tvb.admin@thevirtualbrain.org" }
]
keywords = [
    "animal",
    "brain",
    "delay",
    "dynamics",
    "human",
    "models",
    "neuronal",
    "neuroscience",
    "simulator",
    "tvb",
]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "autopep8",
    "Deprecated",
    "docutils",
    "ipywidgets",
    "mako>=1.1.4",
    "matplotlib",
    "networkx",
    "numba",
    "numexpr",
    "numpy<2.0",
    "scipy",
    "six",
]

[project.optional-dependencies]
test = [
    "h5py",
    "pytest",
    "pytest-benchmark",
    "pytest-xdist",
    "tvb-data",
    "tvb-gdist",
]

[project.urls]
Download = "https://github.com/the-virtual-brain/tvb-root"
Homepage = "https://www.thevirtualbrain.org"

[tool.hatch.version]
path = "tvb/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/tvb",
]

[tool.hatch.build.targets.wheel]
packages = ["tvb"]
