# -*- coding: utf-8 -*-
#
#
# TheVirtualBrain-Framework Package. This package holds all Data Management, and
# Web-UI helpful to run brain-simulations. To use it, you also need to download
# TheVirtualBrain-Scientific Package (for simulators). See content of the
# documentation-folder for more details. See also http://www.thevirtualbrain.org
#
# (c) 2012-2025, Baycrest Centre for Geriatric Care ("Baycrest") and others
#
# This program is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software Foundation,
# either version 3 of the License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
# PARTICULAR PURPOSE.  See the GNU General Public License for more details.
# You should have received a copy of the GNU General Public License along with this
# program.  If not, see <http://www.gnu.org/licenses/>.
#
#
#   CITATION:
# When using The Virtual Brain for scientific publications, please cite it as explained here:
# https://www.thevirtualbrain.org/tvb/zwei/neuroscience-publications
#
#


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tvb-storage"
version = "2.11.0"
description = "A package which handles the storage of TVB data"
readme = "README.rst"
license = "GPL-3.0-or-later"
authors = [
    { name = "Lia Domide" },
    { name = "Paula Prodan" },
    { name = "Bogdan Valean" },
    { name = "Robert Vincze" },
]
maintainers = [
    { name = "TVB Admin", email = "tvb.admin@thevirtualbrain.org" }
]
keywords = [
    "brain",
    "h5",
    "storage",
    "tvb",
]
dependencies = [
    "cryptography",
    "h5py",
    "kubernetes",
    "numpy",
    "pyAesCrypt",
    "requests",
    "tvb-library",
]

[project.optional-dependencies]
encrypt = [
    "syncrypto",
]
test = [
    "decorator",
    "pytest",
]

[project.urls]
Download = "https://github.com/the-virtual-brain/tvb-root"
Homepage = "https://www.thevirtualbrain.org"

[tool.hatch.version]
path = "tvb/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/tvb",
]

[tool.hatch.build.targets.wheel]
packages = ["tvb"]
